[gd_scene load_steps=4 format=2]

[ext_resource path="res://Stages/PlatformEdgeCollision.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="PlatformEdgeCollision" type="Node2D"]
script = ExtResource( 1 )

[node name="EdgeCollisionAreaRight" type="Area2D" parent="."]
rotation = 4.46638e-06

[node name="EdgeCollisionShape" type="CollisionShape2D" parent="EdgeCollisionAreaRight"]
shape = SubResource( 1 )

[node name="EdgeCollisionAreaLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeCollisionAreaLeft"]
shape = SubResource( 2 )
[connection signal="body_entered" from="EdgeCollisionAreaRight" to="." method="_on_EdgeCollisionAreaRight_body_entered"]
[connection signal="body_exited" from="EdgeCollisionAreaRight" to="." method="_on_EdgeCollisionAreaRight_body_exited"]
[connection signal="body_entered" from="EdgeCollisionAreaLeft" to="." method="_on_EdgeCollisionAreaLeft_body_entered"]
[connection signal="body_exited" from="EdgeCollisionAreaLeft" to="." method="_on_EdgeCollisionAreaLeft_body_exited"]
